--- a/DocumentLicenta/References.bib
+++ b/DocumentLicenta/References.bib
@@ -115,4 +115,17 @@ edition = {1st}
   volume={},
   number={},
   pages={156-160},}
-Copy
+
+@techreport{RFC7231,
+  author = {R. Fielding and J. Reschke},
+  title = {Hypertext Transfer Protocol (HTTP/1.1): Semantics and Content},
+  howpublished = {Internet Requests for Comments},
+  type = {RFC},
+  number = {7231},
+  year = {2014},
+  month = {June},
+  issn = {2070-1721},
+  publisher = {RFC Editor},
+  institution = {RFC Editor},
+  url = {http://www.rfc-editor.org/rfc/rfc7231.txt}},
+}
